	
2009-01-06/07 Denton Woods <doomwiz@users.sf.net>
	* Added il_sun.c (Sun Raster file support)
	* ilut_opengl.c (ilutGLInit): Changed Linux ilGLCompressed2D pointer casting
	to coincide with the old SVN version.
	* il_tiff.c / il_alloc.c: Fixed a few pointer casts that were fixed in SVN.
	* test/DDrawTest: Fixed extra whitespace in all files in this project.
	* il_endian.h (iSwapUShort/iSwapUInt): Fixed bug #2023453 (inline GCC asm).
	* ilut_win32.c (ilutConvertSliceToBitmap): Fixed bug #1775036 (definition of buff).
	* il_psd.c (PsdGetData): Fixed bug #2219350 (16-bit luminance images not loading properly).
	* il_manip.c: Cleared up some minor formatting issues.
	* il_png.c (iSavePngInternal): Fixed bug #1680577 (some metadata not written correctly).
	* il_nvidia.cpp (ilnVidiaCompressDXT1): Disabled mipmap generation and added code to
	ilOutputHandler constructor to determine the proper size of the buffer.
	* il.h: Added IL_DXT1A define for nVidia Texture Tools.
	* il_nvidia.cpp: Added DXT1a, DXT3 and DXT5 support.  Renamed ilnVidiaCompressDXT to
	ilnVidiaCompressDXT and added the DxtType parameter.
	* il_internal.c: Cleaned up extra whitespace toward end.
	
2009-01-08 Denton Woods <doomwiz@users.sf.net>
	* opengl_example/gltest.c (main): Added iluInit/ilutInit calls.
	* ilut_opengl.c (ilutGLFormat): Added IL_ALPHA support.
	* il_bmp.c: Minor formatting issues fixed.
	* il.h: Added IL_NVIDIA_COMPRESS #define.
	* il_states.h: Added ilUseNVidiaDXT to IL_STATES.
	* il_state.c: Added IL_NVIDIA_COMPRESS support.
	* il_dds-save.c (Compress): Changed to use NVTT if needed.
	* il_nvidia.cpp: Added ilNVidiaCompressDXTFile and Depth parameter to ilNVidiaCompressDXT.

2009-01-08 Matěj Týč <bubla@sf.net>
	* TODO: Added some tasks that I would like to undertake
	* ChangeLog, NEWS: Copied old ChangeLog entries to NEWS file
	* lib/Makefile.am: Added two new files to the list of IL sources
	(il_sun.c, il_nvidia.cpp)